Precisemo ver a questão do token para fazer o login, o quanto antes, refatorado o advogado, vê o padrão ai