@@ -1,24 +1,16 @@
 package com.ifsul.lawbot.services;
 
-import com.ifsul.lawbot.dto.advogado.CadastrarAdvogadoRequest;
-import com.ifsul.lawbot.dto.advogado.DetalharAdvogadoRequest;
-import com.ifsul.lawbot.dto.advogado.EditarAdvogadoRequest;
-import com.ifsul.lawbot.dto.advogado.ListarAdvogadoRequest;
+import com.ifsul.lawbot.dto.advogado.*;
+import com.ifsul.lawbot.dto.utils.MessageDTO;
 import com.ifsul.lawbot.entities.Advogado;
 import com.ifsul.lawbot.entities.Chave;
 import com.ifsul.lawbot.repositories.AdvogadoRepository;
-import com.ifsul.lawbot.repositories.ChaveRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.util.UriComponentsBuilder;
 
 import java.security.PrivateKey;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AdvogadoService {
@@ -29,84 +21,73 @@ public class AdvogadoService {
     @Autowired
     private GerarChaveService gerarChaveService;
 
-    @Autowired
-    private CriptografiaService cript;
 
-    public ResponseEntity cadastrarAdvogado(CadastrarAdvogadoRequest dados, UriComponentsBuilder uriBuilder){
+    public MessageDTO cadastrarAdvogado(CadastrarAdvogadoRequest dados) {
         Advogado advogado = Advogado.builder().dataNascimento(dados.dataNascimento()).senha(HashSenhasService.hash(dados.senha())).build();
 
         Chave key = gerarChaveService.findKey();
         advogado.setCpf(
-                cript.encriptar(dados.cpf(), key.getChavePublica())
+                CriptografiaService.encriptar(dados.cpf(), key.getChavePublica())
         );
         advogado.setNome(
-                cript.encriptar(dados.nome(), key.getChavePublica())
+                CriptografiaService.encriptar(dados.nome(), key.getChavePublica())
         );
         advogado.setEmail(
-                cript.encriptar(dados.email(), key.getChavePublica())
+                CriptografiaService.encriptar(dados.email(), key.getChavePublica())
         );
         advogado.setOab(
-                cript.encriptar(dados.oab(), key.getChavePublica())
+                CriptografiaService.encriptar(dados.oab(), key.getChavePublica())
         );
         advogado.setChave(key);
-
         repository.save(advogado);
-
-        var uri = uriBuilder.path("/medicos/{id}").buildAndExpand(advogado.getId()).toUri();
-        return ResponseEntity.created(uri).body(new DetalharAdvogadoRequest(advogado));
-
+        return new MessageDTO("Usuário cadastrado!");
     }
 
-    public ResponseEntity<List<ListarAdvogadoRequest>> listarAdvogados() {
-        List<ListarAdvogadoRequest> advogadosDecriptado = new ArrayList<>();
-        List<Advogado> advogados = repository.findAll().stream().map(
-                advogado -> {
-                    advogado.setNome(cript.decriptar(advogado.getNome(), advogado.getChave().getChavePrivada()));
-                    advogado.setCpf(cript.decriptar(advogado.getCpf(), advogado.getChave().getChavePrivada()));
-                    advogado.setOab(cript.decriptar(advogado.getOab(), advogado.getChave().getChavePrivada()));
-                    advogado.setEmail(cript.decriptar(advogado.getEmail(), advogado.getChave().getChavePrivada()));
-
-                    advogadosDecriptado.add(new ListarAdvogadoRequest(advogado));
-                    return advogado;
-
-                }
-        ).toList();
-
-        return ResponseEntity.ok(advogadosDecriptado);
+    public List<ListarAdvogadoRequest> listarAdvogados() {
+        List<Advogado> advogados = repository.findAll();
+        return advogados.stream()
+                .map(this::descriptografarAdvogado)
+                .map(ListarAdvogadoRequest::new)
+                .collect(Collectors.toList());
     }
 
-    public ResponseEntity editarAdvogado(EditarAdvogadoRequest dados){
-        var advogado = repository.getReferenceById(dados.id());
-        if( dados.dataNascimento() != null){
-            advogado.setDataNascimento(dados.dataNascimento());
+    public Advogado editarAdvogado(Long advogadoId, EditarAdvogadoRequest dados){
+        var advogado = repository.getReferenceById(advogadoId);
+
+        if ( dados.senha() != null) {
+            advogado.setSenha(HashSenhasService.hash(dados.senha()));
         }
         if( dados.email() != null){
-            advogado.setEmail(cript.encriptar(dados.email(), advogado.getChave().getChavePublica()));
+            advogado.setEmail(CriptografiaService.encriptar(dados.email(), advogado.getChave().getChavePublica()));
         }
         if( dados.nome() != null){
-            advogado.setNome(cript.encriptar(dados.nome(), advogado.getChave().getChavePublica()));
+            advogado.setNome(CriptografiaService.encriptar(dados.nome(), advogado.getChave().getChavePublica()));
         }
-
-        return ResponseEntity.ok(new DetalharAdvogadoRequest(advogado));
+        return advogado;
     }
 
-    public ResponseEntity deletarAdvogado(Long id){
+    public MessageDTO deletarAdvogado(Long id){
         var advogado = repository.getReferenceById(id);
         repository.delete(advogado);
-
-        return ResponseEntity.noContent().build();
+        return new MessageDTO("Deletado com sucesso!");
     }
 
-    public ResponseEntity detalharAdvogado(Long id){
-        var advogado = repository.getReferenceById(id);
-        var advogadoDecriptografado = new Advogado();
+    public DetalharAdvogadoRequest detalharAdvogado(Long id){
+        Advogado advogado = repository.getReferenceById(id);
+        Advogado advogadoDecriptografado = descriptografarAdvogado(advogado);
         advogadoDecriptografado.setId(id);
-        advogadoDecriptografado.setNome(cript.decriptar(advogado.getNome(), advogado.getChave().getChavePrivada()));
-        advogadoDecriptografado.setCpf(cript.decriptar(advogado.getCpf(), advogado.getChave().getChavePrivada()));
-        advogadoDecriptografado.setOab(cript.decriptar(advogado.getOab(), advogado.getChave().getChavePrivada()));
-        advogadoDecriptografado.setEmail(cript.decriptar(advogado.getEmail(), advogado.getChave().getChavePrivada()));
         advogadoDecriptografado.setDataNascimento(advogado.getDataNascimento());
 
-        return ResponseEntity.ok(new DetalharAdvogadoRequest(advogadoDecriptografado));
+        return new DetalharAdvogadoRequest(advogadoDecriptografado.getNome(), advogadoDecriptografado.getEmail(), advogadoDecriptografado.getOab(),
+                advogadoDecriptografado.getCpf(), advogadoDecriptografado.getDataNascimento());
+    }
+
+    private Advogado descriptografarAdvogado(Advogado advogado) {
+        PrivateKey chavePrivada = advogado.getChave().getChavePrivada();
+        advogado.setNome(CriptografiaService.decriptar(advogado.getNome(), chavePrivada));
+        advogado.setCpf(CriptografiaService.decriptar(advogado.getCpf(), chavePrivada));
+        advogado.setOab(CriptografiaService.decriptar(advogado.getOab(), chavePrivada));
+        advogado.setEmail(CriptografiaService.decriptar(advogado.getEmail(), chavePrivada));
+        return advogado;
     }
 }
